Set explicity width and height for svgs in order to display them correctly on safari

--- a/src/style.css
+++ b/src/style.css
@@ -529,8 +529,7 @@ main > .about-section {
 
 .arrows-container > svg {
   fill: rgba(0, 0, 0, .7);
-  width: 10%;
-  height: 10%;
+  height: 20%;
   filter: drop-shadow(0 0 10px rgba(255, 255, 255, 1));
   transition: transform .2s;
 }
